@@ -13,6 +13,7 @@ Other contributors, listed alphabetically, are:
 * Martin Hans -- autodoc improvements
 * Dave Kuhlman -- original LaTeX writer
 * Thomas Lamb -- linkcheck builder
+* Dan MacKinlay -- metadata fixes
 * Will Maier -- directory HTML builder
 * Christopher Perkins -- autosummary integration
 * Benjamin Peterson -- unittests
