@@ -22,6 +22,7 @@ Contents:
    math
    autodoc
    autosummary
+   metadata
 
    Python <http://python.org/>
 
